https://github.com/dronekit/dronekit-python/pull/1023
fixed last_heartbeat function #1023